# resilientforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: architecture.md  real_world_validation.md  real_world_validation_round2.md  real_world_validation_round3.md  writing_invariants.md
examples/: dashboard_demo.py  guards_demo.py  langgraph_demo.py  raw_loop_demo.py  walkthrough_demo.py
src/resilientforge/: __init__.py
src/resilientforge/cli/: main.py
src/resilientforge/core/: engine.py  invariants.py  isolation.py  recovery.py  signature.py
src/resilientforge/dashboard/: __init__.py  _html.py  app.py
src/resilientforge/integrations/: langgraph_adapter.py  raw_tool_loop.py
src/resilientforge/oracle/: __init__.py  guards.py  recipes.py  semantic_embedding.py  store.py  vector_index.py
src/resilientforge/telemetry/: __init__.py  metrics.py
tests/failure_injection/: harness.py  test_guard_prevention.py  test_recovery_rate.py
tests/failure_injection/scenarios/: ambiguous_fix_candidates.py  malformed_json_args.py  missing_required_field.py  natural_language_date.py  recurring_date_guard.py  transient_timeout.py  wrong_type_argument.py
tests/integration/: test_engine.py  test_isolation.py  test_langgraph_adapter.py  test_raw_tool_loop.py  test_speculative_branching.py
tests/live/: test_anthropic_reflect.py  test_local_reflect.py
tests/load/: test_concurrency.py
tests/unit/: test_cli.py  test_dashboard.py  test_embedder_quality.py  test_guards.py  test_invariants.py  test_isolation.py  test_metrics.py  test_oracle_store.py  test_recovery.py  test_signature.py  test_store_migrations.py
validation/: README.md  metrics_log.jsonl  oracle_export.json  prompts.py  run_validation.py
validation/react-agent/: pyproject.toml
validation/react-agent/src/react_agent/: graph.py  tools.py
validation/round2/: README.md  metrics_log.jsonl  oracle_export.json  run_validation.py
validation/round2/session_logs/: session_1.jsonl  session_2.jsonl  session_3.jsonl
validation/round3/: README.md  metrics_log.jsonl  oracle_export.json  prompts.py  run_validation.py
validation/round3/react-agent/src/react_agent/: graph.py  tools.py
validation/round3/session_logs/: session_1.jsonl  session_2.jsonl  session_3.jsonl
validation/session_logs/: session_1.jsonl  session_2.jsonl  session_3.jsonl
