[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resilientforge"
version = "0.1.0.dev0"
description = "Persistent, cross-run failure memory for tool-calling agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ResilientForge contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "chromadb>=0.5",
    "anthropic>=0.30",
    "openai>=1.30",
    "typer>=0.12",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
resilientforge = "resilientforge.cli.main:app"

[project.urls]
Homepage = "https://github.com/resilientforge/resilientforge"
Issues = "https://github.com/resilientforge/resilientforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/resilientforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: opt-in tests that make real API calls (deselected by default)",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py310"
